nodemailer, token generator, input fields added

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "^4.16.4",
     "filestack-js": "^3.20.0",
     "filestack-react": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^8.3.0",
