--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.3.0",
     "prop-types": "^15.7.2",
+    "query-string": "^4.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.1",
